err/drillsrs.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/SQLAlchemy-1.2.0.egg-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/drillsrs'...
Listing './lib/python3.5/site-packages/drillsrs/cmd'...
Compiling './lib/python3.5/site-packages/drillsrs/cmd/command_base.py'...
***   File "./lib/python3.5/site-packages/drillsrs/cmd/command_base.py", line 9
    names: List[str] = []
         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/drillsrs/cmd/create_card.py'...
***   File "./lib/python3.5/site-packages/drillsrs/cmd/create_card.py", line 32
    deck_name: str = args.deck
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/drillsrs/cmd/create_deck.py'...
***   File "./lib/python3.5/site-packages/drillsrs/cmd/create_deck.py", line 15
    deck_name: str = args.deck
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/drillsrs/cmd/create_tag.py'...
***   File "./lib/python3.5/site-packages/drillsrs/cmd/create_tag.py", line 21
    deck_name: str = args.deck
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/drillsrs/cmd/delete_card.py'...
***   File "./lib/python3.5/site-packages/drillsrs/cmd/delete_card.py", line 16
    deck_name: str = args.deck
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/drillsrs/cmd/delete_deck.py'...
***   File "./lib/python3.5/site-packages/drillsrs/cmd/delete_deck.py", line 14
    deck_name: str = args.deck
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/drillsrs/cmd/delete_tag.py'...
***   File "./lib/python3.5/site-packages/drillsrs/cmd/delete_tag.py", line 16
    deck_name: str = args.deck
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/drillsrs/cmd/export.py'...
***   File "./lib/python3.5/site-packages/drillsrs/cmd/export.py", line 60
    deck_name: str = args.deck
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/drillsrs/cmd/import.py'...
***   File "./lib/python3.5/site-packages/drillsrs/cmd/import.py", line 68
    path: Optional[str] = args.path
        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/drillsrs/cmd/list_cards.py'...
***   File "./lib/python3.5/site-packages/drillsrs/cmd/list_cards.py", line 55
    deck_name: str = args.deck
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/drillsrs/cmd/list_tags.py'...
***   File "./lib/python3.5/site-packages/drillsrs/cmd/list_tags.py", line 30
    deck_name: str = args.deck
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/drillsrs/cmd/review.py'...
***   File "./lib/python3.5/site-packages/drillsrs/cmd/review.py", line 120
    deck_name: str = args.deck
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/drillsrs/cmd/stats.py'...
***   File "./lib/python3.5/site-packages/drillsrs/cmd/stats.py", line 150
    ret: List[HistoryItem] = []
       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/drillsrs/cmd/study.py'...
***   File "./lib/python3.5/site-packages/drillsrs/cmd/study.py", line 40
    deck_name: str = args.deck
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/drillsrs/cmd/update_card.py'...
***   File "./lib/python3.5/site-packages/drillsrs/cmd/update_card.py", line 25
    deck_name: str = args.deck
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/drillsrs/cmd/update_deck.py'...
***   File "./lib/python3.5/site-packages/drillsrs/cmd/update_deck.py", line 16
    deck_name: str = args.deck
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/drillsrs/cmd/update_tag.py'...
***   File "./lib/python3.5/site-packages/drillsrs/cmd/update_tag.py", line 20
    deck_name: str = args.deck
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/drillsrs/data'...
Compiling './lib/python3.5/site-packages/drillsrs/db.py'...
***   File "./lib/python3.5/site-packages/drillsrs/db.py", line 16
    engine: Any = sa.create_engine('sqlite:///%s' % os.path.abspath(get_db_path()))
          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/drillsrs-0.3.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/sqlalchemy'...
Listing './lib/python3.5/site-packages/sqlalchemy/connectors'...
Listing './lib/python3.5/site-packages/sqlalchemy/databases'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/firebird'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/mssql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/mysql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/oracle'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/postgresql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/sqlite'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/sybase'...
Listing './lib/python3.5/site-packages/sqlalchemy/engine'...
Listing './lib/python3.5/site-packages/sqlalchemy/event'...
Listing './lib/python3.5/site-packages/sqlalchemy/ext'...
Listing './lib/python3.5/site-packages/sqlalchemy/ext/declarative'...
Listing './lib/python3.5/site-packages/sqlalchemy/orm'...
Listing './lib/python3.5/site-packages/sqlalchemy/sql'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing/plugin'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing/suite'...
Listing './lib/python3.5/site-packages/sqlalchemy/util'...
Listing './share'...
Listing './share/python-wheels'...
